fix(alignment): Aligns contact information better

--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ a {
 	text-decoration: none;
 	position: relative;
 	transition: color .5s ease;
+	vertical-align: middle;
 }
 
 a:visited {
